<resources>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">9778b56a10b5af3f17faf8e4996ce0a4</string>
    <string name="AMOUNT_PAYABLE">"Amount Payable: Rs. "</string>
    <string name="Add_TO_PLAYLIST_FAILURE_MSG">Oops! Addition to playlist failed. Please try again</string>
    <string name="Add_TO_PLAYLIST_SUCCESS_MSG">Successfully added to your playlist</string>
    <string name="CASTING_TO">"Casting to "</string>
    <string name="DAYS_AGO">" days ago"</string>
    <string name="DAY_AGO">" day ago"</string>
    <string name="DataError">Internet unavailable! Please check your network connection and try again</string>
    <string name="FOLLOW_FAILED">Error while Following! Try again</string>
    <string name="FREEDOM_USER">Gaana Plus*</string>
    <string name="FREE_USER">Free User</string>
    <string name="GAANA_PLUS_MINI">Gaana+ Mini User</string>
    <string name="GAANA_PLUS_MINI_PACKS">Gaana Mini Packs</string>
    <string name="GAANA_PLUS_MINI_USER">Gaana Plus Mini</string>
    <string name="GAANA_PLUS_USER">Gaana Plus User</string>
    <string name="GO_ONLINE">"You haven't been online on Gaana for "</string>
    <string name="HOURS_AGO">" hours ago"</string>
    <string name="HOUR_AGO">" hour ago"</string>
    <string name="LOGIN_LAUNCHED_FOR_ADD_TO_PLAYLIST">Log in to add this to your playlists</string>
    <string name="LOGIN_LAUNCHED_FOR_DOWNLOAD_SYNC">Log in to sync your Downloads</string>
    <string name="LOGIN_LAUNCHED_FOR_FAVORITE_1">Log in to add this</string>
    <string name="LOGIN_LAUNCHED_FOR_FAVORITE_2">to your favorites</string>
    <string name="LOGIN_LAUNCHED_FOR_FAVORITE_SONG">Log in to add this song to your favorites</string>
    <string name="LOGIN_LAUNCHED_FOR_FAVOURITE_FROM_MENU">Log in to access your favorites</string>
    <string name="LOGIN_LAUNCHED_FOR_FREE_TRAIL">Log in to claim your free trial</string>
    <string name="LOGIN_LAUNCHED_FOR_FRIENDS_ACTIVITY">"Log in using Facebook
to see what your friends are listening to"</string>
    <string name="LOGIN_LAUNCHED_FOR_REDEEM_COUPON">Log in to redeem the coupon</string>
    <string name="LOGIN_LAUNCHED_FOR_REFERRALS">Log in to invite your friends</string>
    <string name="LOGIN_LAUNCHED_FOR_REWARDS">Log in to see your rewards</string>
    <string name="LOGIN_LAUNCHED_FOR_SUBSCRIPTION">"Log in to complete your
Gaana+ subscription"</string>
    <string name="LOGIN_LAUNCHED_FROM_GAANA_SUBSCRIBE">"Log in to complete your
Gaana+ subscription"</string>
    <string name="LOGIN_LAUNCHED_TO_REFER_FRIEND">Log in to invite your friends</string>
    <string name="MANDATORY_TO_GO_ONLINE">" days. Go online now to get access to latest music!

(It's mandatory to go online atleast once in 30 days)"</string>
    <string name="MINUTES_AGO">" minutes ago"</string>
    <string name="MINUTE_AGO">" minute ago"</string>
    <string name="MR_Error_text">Something Bad Happened!</string>
    <string name="MR_Tap_retry_text">Tap to Retry</string>
    <string name="NO_ADS_USER">No Ads User</string>
    <string name="NO_DATA">No content here</string>
    <string name="Remove_These_Songs_From_Downloads">Remove these songs from downloads?</string>
    <string name="SELECT_ARTIST">Please select at least one artist to continue</string>
    <string name="SELECT_LANGUAGE">Please select at least one language to continue</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="THIS_PLAYLIST">This playlist</string>
    <string name="THIS_RADIO">This radio</string>
    <string name="TRIAL_USER">Trial User</string>
    <string name="UNFOLLOW_FAILED">Error while Unfollowing! Try again</string>
    <string name="UnableToPlay">Oops! Unable to play this song. Try a different one?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_company">About Company</string>
    <string name="about_the_show">About the show</string>
    <string name="about_this_app">About this App</string>
    <string name="about_us">About Us</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_prev">Previous</string>
    <string name="action_settings">Settings</string>
    <string name="action_view">VIEW</string>
    <string name="activate_gaanaplus_button_msg">Activate Now</string>
    <string name="activate_gaanaplus_trial_message">"Download Unlimited Songs!
Sign up and get 14 days of free trial"</string>
    <string name="activate_gaanaplus_trial_title">Activate Gaana+ trial</string>
    <string name="activate_paid_trial_message">Download unlimited HD songs! Buy Gaana Plus Now</string>
    <string name="activating_trial">Activating trial...</string>
    <string name="active">Active</string>
    <string name="activity">ACTIVITY</string>
    <string name="ad_free_music">"Ad Free
Music"</string>
    <string name="ad_logo_content">Ads by Colombia</string>
    <string name="add_more_songs">Add More Songs</string>
    <string name="add_more_songs_menu">Find More Songs</string>
    <string name="add_playlist_caps">ADD TO EXISTING PLAYLIST</string>
    <string name="add_songs">Add Songs</string>
    <string name="add_to_mymusic">Favorite</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="added_by">Added by %1$s</string>
    <string name="adding_to_playlist_text">Adding to playlist...</string>
    <string name="adjust_sound_quality_toast">Adjusting sound quality based on your connection…</string>
    <string name="adjusting_sound_quality">Adjusting sound quality based on your connection</string>
    <string name="ads_free_experience">Ad Free Experience</string>
    <string name="agree_terms_conditions">"Please agree to Gaana's Terms &amp; Conditions."</string>
    <string name="agree_text">Agree</string>
    <string name="cancel_button">Cancel</string>
    <string name="continue_button">Continue</string>
    <string name="continue_fb_txt">Continue with Facebook</string>
    <string name="continue_offline_mode">To continue listening in offline mode</string>
    <string name="dl_msg_ok_caps">OK</string>
    <string name="dlg_msg_cancel">Cancel</string>
    <string name="email_explain_text">We will send your data to your registered mail ID</string>
    <string name="favorite_text">" Favorite"</string>
    <string name="home">Home</string>
    <string name="in_2016_on_gaana">Gaana 2016</string>
    <string name="mymusic">My Music</string>
    <string name="night_mode_explaination">You can set night mode to turn on at sunset and off at sunrise. Additional options are available within Gaana app settings.</string>
    <string name="oops_txt">Oops!</string>
    <string name="oops_txt_desc">"No Gaana+? Not to worry, we’ll continue playing 
 these songs online in the meantime"</string>
    <string name="opt_cast_gaana">Cast Gaana</string>
    <string name="opt_delete">Delete</string>
    <string name="opt_download">Download</string>
    <string name="opt_edit">Edit</string>
    <string name="opt_more">More</string>
    <string name="opt_play_on">Play on...</string>
    <string name="opt_search">Search</string>
    <string name="opt_show_downloaded">Show Downloaded</string>
    <string name="opt_show_expired_downloads">Show Expired Downloads</string>
    <string name="opt_show_gaana_mini">Show Gaana Mini</string>
    <string name="opt_show_queued">Show Queued</string>
    <string name="opt_show_smart_downloads">Show Smart Downloads</string>
    <string name="or">OR</string>
    <string name="permision_expanationText_camera">This lets you to scan Gaana party code</string>
    <string name="permision_expanationText_getaccounts">This lets Gaana to authenticate you</string>
    <string name="permision_expanationText_location">This lets Gaana access your current location and customize your experience</string>
    <string name="permision_expanationText_phonestate">This lets Gaana read phone status and render content accordingly</string>
    <string name="permision_expanationText_record">This lets you to interact with Gaana voice commands</string>
    <string name="permision_expanationText_sms">This lets Gaana to recieve OTP for payment transaction</string>
    <string name="permision_expanationText_storage">This lets Gaana store and access information on your device like downloaded songs</string>
    <string name="permision_headerText_allowing">Allow Gaana the following permission?</string>
    <string name="permision_headerText_camera">Camera</string>
    <string name="permision_headerText_getaccounts">Google</string>
    <string name="permision_headerText_location">Location</string>
    <string name="permision_headerText_phonestate">Phone</string>
    <string name="permision_headerText_record">Voice Interaction</string>
    <string name="permision_headerText_sms">SMS</string>
    <string name="permision_headerText_storage">Storage</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="radio">Radio</string>
    <string name="renew_now">RENEW NOW</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="search_title">Search</string>
    <string name="string_and">"  and  "</string>
    <string name="string_tnc">T&amp;C</string>
    <string name="tnc_part_1">"I accept the  "</string>
    <string name="tnc_part_2">"  of Gaana."</string>
    <string name="txt_otp_enter">Enter OTP</string>
    <string name="txt_show">Show</string>
    <string name="txt_verify_otp_hint">Enter OTP here</string>
    <string name="verify_otp_header_txt">We have sent an OTP to your mail</string>
    <string name="yim_2016_200_countries">200+ Countries</string>
    <string name="yim_2016_2_million">2 Millon+</string>
    <string name="yim_2016_5_billion">5 Billion+</string>
    <string name="yim_2016_played_in">PLAYED IN</string>
    <string name="yim_2016_playlist_created">PLAYLIST CREATED</string>
    <string name="yim_2016_songs_played">SONGS PLAYED</string>
</resources>