<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/editActionbar" android:title="@string/opt_edit" />
    <item android:id="@id/deleteActionBar" android:title="@string/opt_delete" />
    <item android:id="@id/cancelActionBar" android:title="@string/dlg_msg_cancel" />
    <group android:checkableBehavior="all">
        <item android:id="@id/gaana_mini" android:visible="false" android:title="@string/opt_show_gaana_mini" />
        <item android:id="@id/downloaded" android:title="@string/opt_show_downloaded" />
        <item android:id="@id/queued" android:title="@string/opt_show_queued" />
        <item android:id="@id/smart_downloads" android:title="@string/opt_show_smart_downloads" />
        <item android:id="@id/expired_downloads" android:visible="false" android:title="@string/opt_show_expired_downloads" />
    </group>
</menu>