<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@color/white" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permision_headerText_allowing" />
    <LinearLayout android:orientation="vertical" android:id="@id/dialog_explanationContainer_Row1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:textStyle="bold" android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permision_headerText_location" />
        <TextView android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/permision_expanationText_location" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/dialog_explanationContainer_Row2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:textStyle="bold" android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permision_headerText_storage" />
        <TextView android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/permision_expanationText_storage" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:textStyle="bold" android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permision_headerText_phonestate" />
        <TextView android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/permision_expanationText_phonestate" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/dialog_explanationContainer_Row4" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:textStyle="bold" android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permision_headerText_sms" />
        <TextView android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/permision_expanationText_sms" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/dialog_explanationContainer_Row5" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:textStyle="bold" android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permision_headerText_getaccounts" />
        <TextView android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/permision_expanationText_getaccounts" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/dialog_explanationContainer_Row6" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:textStyle="bold" android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permision_headerText_record" />
        <TextView android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/permision_expanationText_record" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/dialog_explanationContainer_Row7" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:textStyle="bold" android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permision_headerText_camera" />
        <TextView android:textColor="@color/popup_edit_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/permision_expanationText_camera" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="right" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textColor="@color/gaana.red" android:id="@id/dialog_explanation_cancel" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingRight="10.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_button" />
        <TextView android:textColor="@color/gaana.red" android:id="@id/dialog_explanation_ok" android:paddingLeft="15.0dip" android:paddingTop="20.0dip" android:paddingRight="15.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dl_msg_ok_caps" />
    </LinearLayout>
</LinearLayout>