<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/back" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginTop="@dimen/activity_horizontal_margin" android:scaleType="centerInside" android:layout_alignParentLeft="true" app:srcCompat="?actionbar_back" />
    <TextView android:textSize="20.0sp" android:id="@id/ab_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="?actionBarSize" android:layout_marginTop="16.0dip" android:text="@string/txt_otp_enter" android:layout_toRightOf="@id/back" style="?onboard_email_title_txt" />
    <TextView android:textSize="14.0sp" android:textColor="?first_line_color" android:id="@id/txt_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:text="@string/verify_otp_header_txt" android:layout_below="@id/ab_header" android:layout_centerHorizontal="true" />
    <EditText android:textSize="16.0sp" android:textColor="?first_line_color" android:textColorHint="?first_line_color_50" android:id="@id/edit_txt_otp" android:clickable="false" android:layout_width="fill_parent" android:layout_height="@dimen/grid_single_line_bar_height" android:layout_marginTop="24.0dip" android:hint="@string/txt_verify_otp_hint" android:layout_below="@id/txt_header" android:inputType="numberPassword" />
    <TextView android:textSize="12.0dip" android:textColor="?first_line_color_50" android:gravity="center" android:id="@id/txt_show_otp" android:paddingLeft="10.0dip" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/txt_show" android:layout_alignTop="@id/edit_txt_otp" android:layout_alignRight="@id/edit_txt_otp" android:layout_alignBottom="@id/edit_txt_otp" />
    <TextView android:id="@id/txt_resend_otp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/resend_otp" android:layout_below="@id/edit_txt_otp" style="@style/text_regular_red" />
    <Button android:gravity="center" android:id="@id/btn_verify_otp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/SUBMIT" android:layout_below="@id/txt_resend_otp" style="?onboard_btn" />
    <TextView android:textColor="?first_line_color" android:id="@id/txt_or" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/or" android:layout_below="@id/btn_verify_otp" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/rl_fb_btn" android:background="@drawable/fb_bg_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_below="@id/txt_or">
        <ImageView android:id="@id/img_btn_fb_logo" android:padding="8.0dip" android:layout_width="48.0dip" android:layout_height="wrap_content" android:layout_alignParentTop="@id/onboard_btn_fb" android:layout_alignParentBottom="@id/onboard_btn_fb" android:layout_centerVertical="true" app:srcCompat="@drawable/vector_icon_facebook_share" />
        <Button android:theme="@style/fb_onboard_button" android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center|left" android:id="@id/onboard_btn_fb" android:background="@drawable/fb_bg_selector" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/continue_fb_txt" android:layout_toRightOf="@id/img_btn_fb_logo" android:layout_centerHorizontal="true" android:textAllCaps="true" />
    </RelativeLayout>
</RelativeLayout>