<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="175.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="36.0sp" android:textColor="?first_line_color" android:id="@id/oops_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/oops_txt" android:layout_centerHorizontal="true" />
    <ImageView android:layout_gravity="center_vertical" android:id="@id/menu_icon" android:background="?selectableItemBackgroundBorderless" android:clickable="true" android:layout_width="@dimen/player_menu_icon_height" android:layout_height="@dimen/player_menu_icon_height" android:scaleType="centerInside" android:layout_alignParentTop="true" android:layout_alignParentRight="true" app:srcCompat="@drawable/vector_ab_cancel" />
    <TextView android:textSize="12.0sp" android:textColor="?first_line_color" android:id="@id/text_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/oops_txt_desc" android:layout_below="@id/oops_txt" android:layout_centerHorizontal="true" />
    <TextView android:textColor="?second_line_color" android:id="@id/subtext_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/continue_offline_mode" android:layout_below="@id/text_desc" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/white" android:id="@id/oops_renew_now" android:background="@color/gaana.red" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="16.0dip" android:text="@string/renew_now" android:layout_below="@id/subtext_desc" android:layout_centerHorizontal="true" />
</RelativeLayout>